<resources>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="app_name">Internet Resources</string>
    <string name="new_product">Product</string>
    <string name="name">Name</string>
    <string name="cad">CAD</string>
    <string name="bitcoin">BitCoin</string>
    <string name="description">Description</string>
</resources>