<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_browse_products"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BrowseProducts">

    <TextView
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="71dp"
        android:id="@+id/textView" />

    <TextView
        android:text="@string/cad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="23dp"
        android:id="@+id/textView2" />

    <TextView
        android:text="@string/bitcoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="32dp"
        android:id="@+id/textView6" />

    <TextView
        android:text="@string/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="31dp"
        android:id="@+id/textView7" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView"
        android:layout_toEndOf="@+id/textView7"
        android:layout_marginStart="21dp"
        android:id="@+id/productName" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView6"
        android:layout_alignEnd="@+id/productName"
        android:id="@+id/cadValue" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView7"
        android:layout_alignStart="@+id/cadValue"
        android:id="@+id/bitValue" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignStart="@+id/bitValue"
        android:id="@+id/description" />

    <Button
        android:text="@string/prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginTop="99dp"
        android:id="@+id/prevBtn"
        android:onClick="prevItem"/>

    <Button
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:id="@+id/nextBtn"
        android:layout_alignBaseline="@+id/prevBtn"
        android:layout_alignBottom="@+id/prevBtn"
        android:layout_alignParentEnd="true"
        android:onClick="nextItem"/>

    <Button
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/addBtn"
        android:layout_below="@+id/prevBtn"
        android:layout_alignStart="@+id/prevBtn"
        android:onClick="addProduct"/>

    <Button
        android:text="@string/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/delBtn"
        android:layout_alignBaseline="@+id/addBtn"
        android:layout_alignBottom="@+id/addBtn"
        android:layout_alignStart="@+id/nextBtn" />
</RelativeLayout>
